[package]
name = "grpc"
description = "Binary module that adds some extra functions to the gmod"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
rglua = "3.0.0-beta2"
discord-rich-presence = "0.2.3"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
user-idle = "0.5.1"
once_cell = "1.19.0"
